WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
276655
[WPE][GTK] First round of memory leak fixes, reported by LeakSanitizer
https://bugs.webkit.org/show_bug.cgi?id=276655
Summary
[WPE][GTK] First round of memory leak fixes, reported by LeakSanitizer
Philippe Normand
Reported
2024-07-16 05:33:54 PDT
.
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2024-07-16 05:36:15 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/30860
EWS
Comment 2
2024-07-17 04:13:26 PDT
Committed
281047@main
(ff8510d36cc7): <
https://commits.webkit.org/281047@main
> Reviewed commits have been landed. Closing PR #30860 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-07-17 04:14:12 PDT
<
rdar://problem/131913817
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug