[WPE][GTK] First round of memory leak fixes, reported by LeakSanitizer https://bugs.webkit.org/show_bug.cgi?id=276655

Reviewed by Xabier Rodriguez-Calvar and Michael Catanzaro.

Fix a few GVariant leaks in WebKit/WebCore and one GSList leak in MiniBrowser.

* Source/WebCore/platform/audio/glib/MediaSessionGLib.cpp:
(WebCore::MediaSessionGLib::updateNowPlaying):
(WebCore::MediaSessionGLib::emitPropertiesChanged):
(WebCore::MediaSessionGLib::playbackStatusChanged):
* Source/WebCore/platform/audio/glib/MediaSessionGLib.h:
* Source/WebKit/WebProcess/InjectedBundle/API/glib/WebProcessExtensionManager.cpp:
(WebKit::parseUserData):
* Tools/MiniBrowser/gtk/BrowserWindow.c:
(browserWindowTryClose):

Canonical link: https://commits.webkit.org/281047@main