Source/WebKit/WebProcess/InjectedBundle/API/glib/WebProcessExtensionManager.cpp
@@ -53,8 +53,8 @@ static void parseUserData(API::Object* userData, String& webProcessExtensionsDir
     ASSERT(userData->type() == API::Object::Type::String);
 
     CString userDataString = static_cast<API::String*>(userData)->string().utf8();
-    GRefPtr<GVariant> variant = g_variant_parse(nullptr, userDataString.data(),
-        userDataString.data() + userDataString.length(), nullptr, nullptr);
+    GRefPtr<GVariant> variant = adoptGRef(g_variant_parse(nullptr, userDataString.data(),
+        userDataString.data() + userDataString.length(), nullptr, nullptr));
 
     ASSERT(variant);
     ASSERT(g_variant_check_format_string(variant.get(), "(m&smv)", FALSE));
